--- a/instructions.html
+++ b/instructions.html
@@ -20,8 +20,8 @@
             <b>Please note:</b><br><br>
             
             1.If you close or refresh the page during the quiz, your progress will be lost.<br>
-            2.Feel free to take the quiz multiple times to improve your score and test your movie knowledge.<br>
-            3.Get ready to show off your movie expertise! Let's begin the quiz now!<BR></P>
+            2.Feel free to take the quiz multiple times to improve your score and test your knowledge.<br>
+            3.Get ready to show off your expertise! Let's begin the quiz now!<BR></P>
             </div>
     </BODY>
 </html>
